crates/editor-codec-macros/tests/compile_fail/missing_grade.rs
use editor_codec_macros::Durable;

#[derive(Durable)]
pub struct S {
    pub a: u64,
}

fn main() {}
